@@ -9,11 +9,12 @@
   <accelerator key="Escape" modifiers="0" signal="cancel"/>
 
   <child>
-    <widget class="GtkMenuItem" id="popup_menu_header">
+    <widget class="GtkCheckMenuItem" id="popup_menu_header">
       <property name="visible">True</property>
       <property name="tooltip" translatable="yes">Welcome to TiEmu III</property>
       <property name="label" translatable="yes">TiEmu III menu (v2.80)</property>
       <property name="use_underline">True</property>
+      <property name="active">False</property>
       <signal name="activate" handler="on_popup_menu_header"/>
     </widget>
   </child>
@@ -45,23 +46,45 @@
   </child>
 
   <child>
-    <widget class="GtkCheckMenuItem" id="recv_file_from_tiemu1">
+    <widget class="GtkMenuItem" id="link1">
       <property name="visible">True</property>
-      <property name="tooltip" translatable="yes">Uncheck it if you are running program which use the linkport for sound.</property>
-      <property name="label" translatable="yes">_Listen for files sent from TiEmu</property>
+      <property name="label" translatable="yes">Lin_k</property>
       <property name="use_underline">True</property>
-      <property name="active">True</property>
-      <signal name="activate" handler="on_recv_file_from_tiemu1_activate" last_modification_time="Sun, 24 Apr 2005 17:00:05 GMT"/>
-    </widget>
-  </child>
 
-  <child>
-    <widget class="GtkMenuItem" id="link_cable1">
-      <property name="visible">True</property>
-      <property name="tooltip" translatable="yes">Do the link cable setup.</property>
-      <property name="label" translatable="yes">Link _options...</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_link_cable1_activate"/>
+      <child>
+	<widget class="GtkMenu" id="link1_menu">
+
+	  <child>
+	    <widget class="GtkMenuItem" id="link_cable1">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Do the link cable setup.</property>
+	      <property name="label" translatable="yes">Settings...</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_link_cable1_activate"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkMenuItem" id="quick_send1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Quick-send...</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_quick_send1_activate" last_modification_time="Tue, 05 Dec 2006 21:23:11 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkCheckMenuItem" id="recv_file_from_tiemu1">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Listen for files sent from TiEmu. Uncheck it if you are running program which use the linkport for sound.</property>
+	      <property name="label" translatable="yes">_Listen for files</property>
+	      <property name="use_underline">True</property>
+	      <property name="active">True</property>
+	      <signal name="activate" handler="on_recv_file_from_tiemu1_activate" last_modification_time="Sun, 24 Apr 2005 17:00:05 GMT"/>
+	    </widget>
+	  </child>
+	</widget>
+      </child>
     </widget>
   </child>
 
@@ -269,7 +292,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Med LCD update</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">high_lcd_update1</property>
 	      <signal name="activate" handler="on_med_lcd_update1_activate" last_modification_time="Wed, 11 May 2005 14:21:37 GMT"/>
 	    </widget>
@@ -280,7 +303,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Low LCD update</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">high_lcd_update1</property>
 	      <signal name="activate" handler="on_low_lcd_update1_activate" last_modification_time="Wed, 11 May 2005 14:16:04 GMT"/>
 	    </widget>
@@ -307,7 +330,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Large view (x2)</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_large_view1_activate" last_modification_time="Fri, 14 May 2004 15:28:18 GMT"/>
 	    </widget>
@@ -318,7 +341,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Full screen</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_full_view1_activate"/>
 	    </widget>
@@ -329,7 +352,7 @@
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Custom view</property>
 	      <property name="use_underline">True</property>
-	      <property name="active">False</property>
+	      <property name="active">True</property>
 	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_custom_view1_activate" last_modification_time="Sun, 05 Jun 2005 08:47:19 GMT"/>
 	    </widget>
@@ -441,7 +464,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image94">
+		<widget class="GtkImage" id="image106">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -464,7 +487,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image95">
+		<widget class="GtkImage" id="image107">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -555,7 +578,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image96">
+		<widget class="GtkImage" id="image108">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
