@@ -9,10 +9,12 @@ gchar *s = N_("TiEmu III menu (v2.80)");
 gchar *s = N_("Send the selected file to the emulator. This file can be of any type (single, group, backup, FLASH app or FLASH OS).");
 gchar *s = N_("Send _file to TiEmu...");
 gchar *s = N_("Debug file with TiEmu...");
-gchar *s = N_("Uncheck it if you are running program which use the linkport for sound.");
-gchar *s = N_("_Listen for files sent from TiEmu");
+gchar *s = N_("Lin_k");
 gchar *s = N_("Do the link cable setup.");
-gchar *s = N_("Link _options...");
+gchar *s = N_("Settings...");
+gchar *s = N_("Quick-send...");
+gchar *s = N_("Listen for files sent from TiEmu. Uncheck it if you are running program which use the linkport for sound.");
+gchar *s = N_("_Listen for files");
 gchar *s = N_("_Configuration");
 gchar *s = N_("Save the actual configuration into a text file.");
 gchar *s = N_("Save config...");
